--- a/To Do List.html
+++ b/To Do List.html
@@ -4,27 +4,34 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-    <link rel="stylesheet" href="css FOR TO DO LIST.css" />
-    <script src="script For to do.js" defer></script>
+    <link rel="icon" type="image/x-icon" href="CSS/PIC/checklist.png">
+
+
+    <!--MAIN CSS-->
+    <link rel="stylesheet" href="CSS/css FOR TO DO LIST.css" />
+
     <title>TO DO LIST</title>
 </head>
 <body>
     <section class="todo">
         <h1>TO DO LIST</h1>
+
+        <!--INPUT MENU-->
+
         <div class="input">
-        <input 
-        type="text" 
-        class="inputFild"
-        id="todoInput"
-        placeholder="New Task"
-        />
-        
+        <textarea id="todoInput" class="inputField" placeholder="New Task"></textarea>
         </div>
         <button class="btn">Add</button>
+
+        <!--SCROLL MENU WITH TASK-->
+
         <ul class="scr">
             <li id="todoList"></li>
         </ul>
         <i class="fa-regular fa-x fa-flip-vertical"></i>
+
+        <!--COUNT AND DEL-->
+
         <div>
             <hr class="counter" />
             <div class="counter-con">
@@ -33,6 +40,10 @@
             </div>
         </div>
 </section>
+
+<!--SCRIPT-->
+<script src="JAVASCRIPT/script For to do.js" defer></script>
+
 <footer>
     
 </footer>
